fix de insercion de pedidos en retiro